fixed double scrollbars

--- a/essentialism/src/App.css
+++ b/essentialism/src/App.css
@@ -6,6 +6,7 @@
   align-items: center;
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .App-logo {
